[package]
name = "anyleaf_usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = { version = "^0.7.0", default_features = false }


hal = { package = "stm32-hal2", path = "../../stm32-hal", optional = true }
usbd-serial = { version = "^0.1.1", optional = true }
defmt = { version = "^0.3.5", optional = true }

[features]
hal = []
hal_g431 = ["hal/g431", "defmt", "usbd-serial", "hal"]
hal_g473 = ["hal/g473", "defmt", "usbd-serial", "hal"]
hal_h7 = ["hal/h743v", "defmt", "hal"] # todo: OTG