[package]
name = "anyleaf_usb"
version = "0.1.0"
edition = "2021"


[dependencies]
num_enum = { version = "^0.7.0", default_features = false }


hal = { package = "stm32-hal2", path = "../../stm32-hal", optional = true }
usbd-serial = { version = "^0.2.0", optional = true }
defmt = "^0.3.5"

[features]
hal = []
hal_g431 = ["hal/g431", "usbd-serial", "hal"]
hal_g473 = ["hal/g473", "usbd-serial", "hal"]
hal_h7 = ["hal/h743v", "hal"] # todo: OTG